Bug 392249 - Cursor stuck at busy icon after opening a png file
Summary: Cursor stuck at busy icon after opening a png file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-23 22:37 UTC by Kampidh
Modified: 2018-04-03 11:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kampidh 2018-03-23 22:37:56 UTC
upon opening a png file and choosing the colorspace, mouse cursor keeps displaying busy icon (hourglass/busy circle), even after the file is fully loaded into krita window.
 
I can continue painting/editing normally, but I kept stuck with busy cursor.
Comment 1 Halla Rempt 2018-03-28 12:50:50 UTC
Git commit 83d3ade639e89819419ca40a3d808a785f728e72 by Boudewijn Rempt.
Committed on 28/03/2018 at 12:49.
Pushed by rempt into branch 'master'.

Use the KisCursorOverrideHijacker object when loading png images

This is safer than overriding the override cursor manually, or
restoring it and overriding it back.

This also adds documentation to this useful little class that
was actually completely unused...

M  +6    -0    libs/ui/kis_cursor_override_hijacker.h
M  +3    -2    libs/ui/kis_png_converter.cpp
M  +0    -1    plugins/impex/video/kis_video_export.cpp

https://commits.kde.org/krita/83d3ade639e89819419ca40a3d808a785f728e72
Comment 2 Halla Rempt 2018-04-03 11:45:43 UTC
Git commit 39ed7a7e361e9d8ea04f205789a39bdb666764fc by Boudewijn Rempt.
Committed on 03/04/2018 at 11:17.
Pushed by rempt into branch 'krita/4.0'.

Use the KisCursorOverrideHijacker object when loading png images

This is safer than overriding the override cursor manually, or
restoring it and overriding it back.

This also adds documentation to this useful little class that
was actually completely unused...
(cherry picked from commit 83d3ade639e89819419ca40a3d808a785f728e72)

M  +6    -0    libs/ui/kis_cursor_override_hijacker.h
M  +3    -2    libs/ui/kis_png_converter.cpp
M  +0    -1    plugins/impex/video/kis_video_export.cpp

https://commits.kde.org/krita/39ed7a7e361e9d8ea04f205789a39bdb666764fc