Use the KisCursorOverrideHijacker object when loading png images

This is safer than overriding the override cursor manually, or
restoring it and overriding it back.

This also adds documentation to this useful little class that
was actually completely unused...

BUG:392249
(cherry picked from commit 83d3ade639e89819419ca40a3d808a785f728e72)